[tool.poetry]
name = "pydantic-vault"
version = "0.7.1"
description = "A simple extension to Pydantic BaseSettings that can retrieve secrets from Hashicorp Vault"
authors = ["Thomas Gaudin <thomas.gaudin@centraliens-lille.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nymous/pydantic-vault"
documentation = "https://github.com/nymous/pydantic-vault"
keywords = ["hashicorp", "vault", "hvac", "pydantic"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet",
  "Topic :: Security"
]
packages = [
  { include = "pydantic_vault", from = "src" }
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/nymous/pydantic-vault/issues"
"Changelog" = "https://github.com/nymous/pydantic-vault/blob/master/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.6.2"
pydantic = "^1.8"
hvac = ">=0.10.6, <0.12"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
mypy = "^0.910"
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
pyfakefs = "^4.5.0"
pytest-cov = "^2.12.1"
pre-commit = "^2.14.0"
isort = "^5.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
